macro/derive/tests/ui_fail/from_variant_conflicting_implementation.stderr
error[E0119]: conflicting implementations of trait `std::convert::From<Variant1>` for type `Enum`
  --> tests/ui_fail/../ui_pass/enum_from_variant.rs
   |
   | #[derive(iroha_derive::FromVariant)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Enum`
   |
  ::: tests/ui_fail/from_variant_conflicting_implementation.rs:3:1
   |
3  | impl From<Variant1> for Enum {
   | ---------------------------- first implementation here
   |
   = note: this error originates in the derive macro `iroha_derive::FromVariant` (in Nightly builds, run with -Z macro-backtrace for more info)
